Add service for authentication and authorization, use keycloak and gives token to use with gateway